# openev

./: .dockerignore  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  Doxyfile  OpenEVConfig.cmake.in  README.md  abstract-camera_8cpp.html  abstract-camera_8hpp.html  abstract-camera_8hpp.js  abstract-camera_8hpp_source.html  abstract-reader_8cpp.html  abstract-reader_8hpp_source.html  abstract-representation_8hpp.html  abstract-representation_8hpp.js  abstract-representation_8hpp_source.html  algorithms_8hpp.html  algorithms_8hpp_source.html  annotated.html  annotated_dup.js  array_8cpp.html  array_8hpp_source.html  camera_8hpp.html  camera_8hpp_source.html  circular_8cpp.html  circular_8hpp.html  circular_8hpp.js  circular_8hpp_source.html  classContainerTestFixture-members.html  classContainerTestFixture.html  classCoutRedirect-members.html  classCoutRedirect.html  classes.html  classev_1_1AbstractCamera-members.html  classev_1_1AbstractCamera.html  classev_1_1AbstractCamera.js  classev_1_1AbstractCamera__-members.html  classev_1_1AbstractCamera__.html  (+290 more)
.github/workflows/: build.yaml
docs/: annotated.html  classes.html  classev_1_1AbstractRepresentation__-members.html  classev_1_1AbstractRepresentation__.html  classev_1_1AbstractRepresentation____coll__graph.map  classev_1_1AbstractRepresentation____coll__graph.md5  classev_1_1AbstractRepresentation____inherit__graph.map  classev_1_1AbstractRepresentation____inherit__graph.md5  classev_1_1EventBuffer-members.html  classev_1_1EventBuffer.html  classev_1_1EventBuffer__coll__graph.map  classev_1_1EventBuffer__inherit__graph.md5  classev_1_1EventImage__-members.html  classev_1_1EventImage__.html  classev_1_1EventImage____coll__graph.map  classev_1_1EventImage____coll__graph.md5  classev_1_1EventImage____inherit__graph.map  classev_1_1EventImage____inherit__graph.md5  classev_1_1EventPacket-members.html  classev_1_1EventPacket.html  classev_1_1EventPacket__inherit__graph.map  classev_1_1EventPacket__inherit__graph.md5  classev_1_1Event__-members.html  classev_1_1Event__.html  classev_1_1Event____coll__graph.md5  classev_1_1Event____inherit__graph.map  classev_1_1Rect2__-members.html  classev_1_1Rect2__.html  classev_1_1Rect2____inherit__graph.map  classev_1_1Rect2____inherit__graph.md5  classev_1_1Rect3__-members.html  classev_1_1Rect3__.html  classev_1_1Rect3____coll__graph.md5  classev_1_1Rect3____inherit__graph.map  classev_1_1Rect__-members.html  classev_1_1Rect__.html  classev_1_1Rect____coll__graph.md5  classev_1_1Rect____inherit__graph.map  classev_1_1Size2__.html  classev_1_1Size2____coll__graph.md5  (+63 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_0.js  (+3 more)
examples/: CMakeLists.txt  example-davis.cpp  example-event-histogram.cpp  example-event-image.cpp  example-event.cpp  example-plain-text-reader.cpp  example-point-cloud.cpp  example-time-surface.cpp
include/openev/: abstract-representation.tpp  camera.hpp  containers.hpp  event-histogram.tpp  event-image.tpp  logger.hpp  openev.hpp  options.hpp  options.hpp.in.cmake  point-cloud.tpp  reader.hpp  representation.hpp  time-surface.tpp  types.hpp  undistortion.hpp
modules/algorithms/: CMakeLists.txt
modules/algorithms/include/openev/: algorithms.hpp
modules/algorithms/include/openev/algorithms/: efft.hpp
modules/algorithms/src/: efft.cpp
modules/containers/: CMakeLists.txt
modules/containers/include/openev/: containers.hpp
modules/containers/include/openev/containers/: array.hpp  circular.hpp  deque.hpp  queue.hpp  vector.hpp
modules/containers/src/: array.cpp  circular.cpp  deque.cpp  queue.cpp  vector.cpp
modules/containers/tests/: test_containers.cpp
modules/core/: CMakeLists.txt
modules/core/include/openev/: core.hpp
modules/core/src/: matrices.cpp  types.cpp  undistortion.cpp
modules/core/tests/: test_matrices.cpp  test_types.cpp
modules/devices/: CMakeLists.txt
modules/devices/include/openev/: devices.hpp
modules/devices/include/openev/devices/: abstract-camera.hpp  davis.hpp  davis346.hpp
modules/devices/src/: abstract-camera.cpp  davis.cpp  davis346.cpp
modules/evproc/: CMakeLists.txt
modules/evproc/include/openev/: evproc.hpp
modules/evproc/include/openev/evproc/: undistortion.hpp  voting.hpp
modules/evproc/src/: undistortion.cpp  voting.cpp
modules/readers/: CMakeLists.txt
modules/readers/include/openev/: readers.hpp
modules/readers/include/openev/readers/: abstract-reader.hpp  plain-text-reader.hpp
modules/readers/src/: abstract-reader.cpp  plain-text-reader.cpp
modules/representations/: CMakeLists.txt
modules/representations/scripts/: decay_kernels.py
modules/representations/src/: abstract-representation.cpp  event-histogram.cpp  event-image.cpp  point-cloud.cpp  representations.cpp  time-surface.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/openev/: utils.hpp
modules/utils/include/openev/utils/: logger.hpp
modules/utils/src/: logger.cpp
modules/utils/tests/: test_logger.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+46 more)
src/: abstract-camera.cpp  abstract-reader.cpp  containers.cpp  davis.cpp  plain-text-reader.cpp  types.cpp  undistortion.cpp
(+14 files in other folders)
